# wibeee

./: .gitignore  README.md  build.sh  examples.py  main.py  pyproject.toml  setup.cfg
src/: __init__.py
src/wibeee/: __init__.py  utils.py  wibeee.py
src/wibeee/errors/: __init__.py
