[metadata]
name = wibeee
version = 1.1.0
author = Yoda
author_email = dev-yoda@proton.me
description = An api interface for WiBeee
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/veryheavypickle/wibeee
project_urls =
    Github = https://github.com/veryheavypickle/wibeee
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src